# murmur

./: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  changes.md
src/: config.rs  error.rs  main.rs  router.rs  templates.rs
src/middleware/: auth.rs  cache.rs  csp.rs  mod.rs
src/models/: comment.rs  mod.rs  post.rs  subreddit.rs  user.rs
src/proxy/: media_proxy.rs  mod.rs  reddit_api.rs
src/routes/: api.rs  auth.rs  frontpage.rs  mod.rs  post.rs  search.rs  settings.rs  subreddit.rs  subreddit_discovery.rs  user.rs
static/: robots.txt
static/css/: design-system.css
static/js/: comments.js  infinite-scroll.js  main.js  theme.js  voting.js
templates/: base.html
templates/components/: comment.html  post_card.html  subreddit_sidebar.html
templates/pages/: frontpage.html  login.html  post.html  search.html  subreddit.html
templates/partials/: comment_thread.html
