[package]
name = "murmur"
version = "0.1.0"
edition = "2021"
description = "A privacy-focused Reddit frontend proxy — browse Reddit without tracking, ads, or data collection"
repository = "https://github.com/skulls206-creator/murmur"
authors = ["skullsdev"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "set-header", "catch-panic", "trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templating
askama = { version = "0.12", features = ["serde-json", "mime-guessing"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "cookies", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Auth
oauth2 = "4"
cookie = { version = "0.18", features = ["private"] }

# Utils
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
mime_guess = "2"
humantime = "2"
thiserror = "1"
anyhow = "1"
once_cell = "1"
lazy_static = "1"

# Config
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
